@@ -27,9 +27,11 @@ Version 2.0.3
    - Bugfix: Handling network writing/reading errors
    - Bugfix/Feature: Support for international Mailbox names for IMAP
    - Security Bugfix: DoS attacks by sending a unterminated response to the
-     SELECT/SEARCH commands anticipated
+     SELECT, SEARCH, FETCH commands anticipated
    - Bugfix: User set value for maximum number of mail to be collected is now
      respected (IMAP)
+   - Bugfix: Fetching mails is no longer stopped if "A004 OK" is in the
+     subject, date or from line of a mail
 
 Version 2.0.2
  * Some cosmetic fixes
